--- a/.gitignore
+++ b/.gitignore
@@ -102,4 +102,5 @@ typings/
 # Ignore all local history of files
 .history
 
+practice/
 # End of https://www.gitignore.io/api/node,visualstudiocode
