--- a/part1/unicafe/package.json
+++ b/part1/unicafe/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "courseinfo",
-  "version": "0.1.5",
+  "name": "unicafe",
+  "version": "0.1.6",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
