--- a/part1/anecdotes/package.json
+++ b/part1/anecdotes/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "unicafe",
-  "version": "0.1.11",
+  "name": "anecdotes",
+  "version": "0.1.14",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
